--- a/movietruck.client/package.json
+++ b/movietruck.client/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
     "@tanstack/react-query": "^5.67.1",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
